# himeko_lang

./: .gitignore  CHANGELOG.md  README.md  generate_antlr.ps1
himeko_lang_core/: pyproject.toml
himeko_lang_core/examples/agriculture/: chicken_camera.himeko
himeko_lang_core/examples/fuzzy/: fuzzy_signature_example.himeko
himeko_lang_core/examples/kinematics/: anthropomorphic_arm.himeko  anthropomorphic_arm_import.himeko  chicken_kinematics.himeko  kamu_fanuc.himeko  meta_kinematics.himeko  meta_kinematics_model.himeko  meta_topic.himeko  simple_kinematics.himeko  very_simple_kinematics.himeko  very_simple_kinematics_with_primitives.himeko
himeko_lang_core/examples/mxw/: mxw_cylinder.himeko  mxw_meta.himeko
himeko_lang_core/examples/queries/: himeko_simple_query.himeko
himeko_lang_core/examples/simple/: inheritance_example.himeko  minimal_example.himeko  minimal_example_basic_hierarchy.himeko  minimal_example_fields.himeko  minimal_example_fields_with_reference.himeko  minimal_example_fields_with_reference2.himeko  minimal_example_with_edges.himeko  minimal_example_with_hierarchy_ref_edges.himeko  minimal_example_with_hierarchy_ref_edges_evaluation.himeko  minimal_example_with_hierarchy_ref_edges_evaluation2.himeko  minimal_example_with_hierarchy_ref_edges_evaluation_unknown_references.himeko  minimal_example_with_hierarchy_ref_edges_with_values.himeko  minimal_example_with_multiple_edges.himeko
himeko_lang_core/lang/: HimekoHypergraphLang.g4  HimekoMetalang.lark  himeko_grammar_test.py  himeko_meta_parser.py
himeko_lang_core/lang/ast/: ast_hbcm.py  himeko_ast.py
himeko_lang_core/lang/graph/: search_strategies.py
himeko_lang_core/lang/himeko_ast/: ast_hbcm.py  himeko_ast.py
himeko_lang_core/lang/identification/: strategies.py
himeko_lang_core/lang/metaelements/: himekoedge.py  himekoelement.py  himekonode.py  himekovalue.py  metadescription.py
himeko_lang_core/lang/simple_examples/: himeko_ast_example.py
himeko_lang_core/robotics/communication_graphs/: talker_subscriber.himeko
himeko_lang_core/robotics/sensors/: ip_camera.himeko
himeko_lang_core/src/editor/: connection_element.py  edge_element.py  editor_commands.py  (+6 more)
himeko_lang_core/test/: program_mxw_creation.py  test_ancestor_testcase.py  test_ast_camera.py  test_ast_mxw.py  test_ast_parsing.py  test_ast_parsing_templating.py  test_ast_references.py  test_ast_robotics.py  test_case_descriptions.py  test_copy_templates.py  test_core_functionalities.py  test_edges_copy_values.py  test_hbcm_parsing.py  test_label_coding.py  test_multiedge.py  test_node_hierarchy_generation_progenitytest  test_tensor_representation.py  test_tensor_representation_decode.py  test_tensor_representation_encode.py  test_urdf.xml
himeko_lang_core/transformer/: himeko_transformer.py  neural_networks.ipynb  tensor_representation.py
(+123 files in other folders)
