[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "himeko_lang_core"
version = "0.0.1"
authors = [
    { name="Csaba Hajdu", email="kyberszittya@protonmail.ch" },
]
description = "Himeko language core"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kyberszittya/himeko-lang"
Issues = "https://github.com/kyberszittya/himeko-lang/issues"