[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "himeko_lang"
version = "0.0.1"
authors = [
    { name="Csaba Hajdu", email="kyberszittya@protonmail.ch" },
]
description = "Himeko language core, LARK parser"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "himeko>=0.0.1",
    "lark>=1.1.0",
    "lxml>=4.6.3",
    "networkx>=3.1",
    "matplotlib>=3.10.0",
    "pyyaml>=6.0",
    "pygraphviz>=0.18",
]
[tool.flake8]
extend-exclude = ["**/himeko_meta_parser.py"]
[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]          # look under the src‑layout root
exclude = ["test*", "docs*"]   # optional glob patterns to skip
[project.urls]
Homepage = "https://github.com/kyberszittya/himeko-lang"
Issues = "https://github.com/kyberszittya/himeko-lang/issues"
[tool.pytest.ini_options]
testpaths = ["test"]
addopts = ["--verbose"]